# Quaid

./: .gitignore  .ls-lint.yml  .mise.toml  .yamlfmt  .yamllint.yml  IMPLEMENTING_SLASH_COMMANDS.md  PROJECT-STATUS.md  README.md  dependencies.txt  lefthook.toml  pyproject.toml  ruff.toml  taplo.toml  workspace-design.md
.claude/agents/: implementation-planner.md
plans/: 01-Vision-and-Problem.md  02-Architecture-and-Design.md  03-Installation-and-Setup.md  04-Configuration-and-Customization.md  05-Core-Features.md  06-Search-and-Intelligence.md  07-CLI-and-API-Reference.md  08-Advanced-Features.md  09-Claude-Self-Reflect-Adaptations.md  10-NetworkX-Graph-Integration.md  11-Data-Cleanup-and-Retention.md  12-Rich-CLI-Integration.md
plans-backup-20251109-022321/: 07-Worktrees.md  08-Slash-Commands.md  09-Config.md  10-Install.md  11-Advanced.md  15-CLI-API-Final.md  16-Python-Architecture.md  17-Custom-Scoring-Framework.md  18-Local-Only-Intelligence.md  19-Reranking-Integration.md  20-Enhanced-Markdown-Structure.md  21-Hybrid-Classification.md  22-Slash-Commands-Design.md  23-Short-Term-Context-System.md  REFINED-VISION-PLAN.md
scripts/: setup.ps1  setup.sh
src/quaid/: __init__.py
