[project]
name            = "quaid"
version         = "0.1.0"
description     = "Add your description here"
readme          = "README.md"
authors         = [{ name = "Takin Profit", email = "techstar.dev@hotmail.com" }]
requires-python = ">=3.14"
dependencies    = []

  [project.scripts]
  quaid = "quaid:main"

[build-system]
requires      = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "pyupgrade>=3.21.1",
    "vulture>=2.14",
]

[tool.vulture]
exclude = ["*/tests/*", "*/test_*.py", "*/conftest.py", "*/__pycache__/*"]
ignore_decorators = ["@app.route", "@dataclass", "@property"]
ignore_names = ["_*", "test_*", "setUp*", "tearDown*"]
min_confidence = 80
sort_by_size = true
paths = ["packages/"]
verbose = false
